reports components and api add

--- a/src/app/calendar/calendar-list/calendar-list.component.html
+++ b/src/app/calendar/calendar-list/calendar-list.component.html
@@ -27,7 +27,7 @@
 </div>
 <div class="table-responsive">
     <table [dir]="langDir" mat-table [dataSource]="calendarList" multiTemplateDataRows
-        class="table table-bordered table-hover grid-height">
+        class="table table-bordered table-hover table_height">
         <ng-container matColumnDef="action">
             <th class="table-column-200" mat-header-cell *matHeaderCellDef>{{'ACTION' | translate}} </th>
             <td class="table-column-200" mat-cell *matCellDef="let element">
