--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -12,7 +12,7 @@
   <div class="loading-shade" *ngIf="dataSource.loading$ | async">
     <mat-spinner></mat-spinner>
   </div>
-  <div class="table-container grid-height">
+  <div class="table-container table_height">
     <table mat-table [dir]="langDir" [dataSource]="dataSource" matSort matSortActive="createdDate" matSortDirection="desc"
       class="mat-elevation-z8">
       <ng-container matColumnDef="action">
