--- a/src/app/customer/customer-interactions/customer-interactions.component.html
+++ b/src/app/customer/customer-interactions/customer-interactions.component.html
@@ -17,7 +17,7 @@
     <mat-spinner></mat-spinner>
 </div>
 <div class="table-responsive" *ngIf="!isLoading">
-    <div class="table table-bordered table-hover grid-height">
+    <div class="table table-bordered table-hover table_height">
         <table mat-table [dataSource]="customerInteractions" matSort multiTemplateDataRows matSortActive="productName">
             <ng-container matColumnDef="action">
                 <th class="table-column-150" mat-header-cell *matHeaderCellDef> Action
