--- a/src/app/dashboard/dashboard-category-grid/dashboard-category-grid.component.html
+++ b/src/app/dashboard/dashboard-category-grid/dashboard-category-grid.component.html
@@ -10,7 +10,7 @@
 
 <div>
     <table [dir]="langDir" mat-table [dataSource]="categoryInteractionsList" multiTemplateDataRows
-        class="table table-bordered table-hover grid-height w-100">
+        class="table table-bordered table-hover table_height w-100">
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Category Name </th>
             <td mat-cell *matCellDef="let element"> {{ element?.categoryName || element.CategoryName}} </td>
