--- a/src/app/dashboard/dashboard-teams-grid/dashboard-teams-grid.component.html
+++ b/src/app/dashboard/dashboard-teams-grid/dashboard-teams-grid.component.html
@@ -7,10 +7,9 @@
         </div>
     </div>
 </div>
-
 <div>
     <table [dir]="langDir" mat-table [dataSource]="teamInteractionsList" multiTemplateDataRows
-        class="table table-bordered table-hover grid-height w-100">
+        class="table table-bordered table-hover table_height w-100">
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Team Name </th>
             <td mat-cell *matCellDef="let element"> {{element.teamName}} </td>
