--- a/src/app/interaction-reports/dump-repoert/dump-repoert.component.html
+++ b/src/app/interaction-reports/dump-repoert/dump-repoert.component.html
@@ -58,8 +58,8 @@
     </div>
 </div>
 <div class="table-responsive">
-    <div class="table table-bordered table-hover grid-height">
-        <table [dir]="langDir" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows
+    <div class="table table-bordered table-hover">
+        <table [dir]="langDir" mat-table [dataSource]="dataSource" class="table_height_reports" matSort multiTemplateDataRows
             matSortActive="productName">
             <ng-container matColumnDef="interactionId">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction ID</th>
@@ -193,33 +193,15 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
-                <td mat-footer-cell colspan="12" *matFooterCellDef>
+                <td mat-footer-cell colspan="12" class="d-none" *matFooterCellDef>
                     <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
                         [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
                     </mat-paginator>
                 </td>
             </ng-container>
-            <ng-container *ngIf="dataSource.count === 0" matColumnDef="no-records">
-                <td mat-footer-cell colspan="5" *matFooterCellDef>
-                    <b> {{'NO_DATA_FOUND' | translate}}</b>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="expandedDetail">
-                <td mat-cell *matCellDef="let inventoryObject" [attr.colspan]="displayedColumns.length">
-                    <ng-container *ngIf="inventoryObject == expandedElement">
-                        <div class="example-element-detail"
-                            [@detailExpand]="inventoryObject == expandedElement ? 'expanded' : 'collapsed'">
-                            <div class="inner-table mat-elevation-z8">
-                                <app-inventory-history-list [inventory]="inventoryObject">
-                                </app-inventory-history-list>
-                            </div>
-                        </div>
-                    </ng-container>
-                </td>
-            </ng-container>
             <tr *matNoDataRow>
-                <td colspan="9">
-                    <span class="p-4 mt-4">
+                <td [attr.colspan]="displayedColumns.length">
+                    <span class="p-5 my5 d-block">
                         <b> {{'NO_DATA_FOUND' | translate}}</b>
                     </span>
                 </td>
@@ -230,7 +212,6 @@
                 *matHeaderRowDef="['action-search','productName-search','stock-search','averagePurchasePrice-search','averageSalesPrice-search'];sticky: true"
                 class="example-second-header-row"> </tr> -->
             <tr mat-footer-row *matFooterRowDef="columnsToDisplay;sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
     </div>
 </div>
