slef assign api

--- a/src/app/calendar/add-calendar/add-calendar.component.html
+++ b/src/app/calendar/add-calendar/add-calendar.component.html
@@ -42,7 +42,8 @@
                 {{"UPDATE" | translate}}</button>
             <button type="button" class="btn btn-danger btn-md mx-3 px-3 py-2"  (click)="onCancel()" ><i
                     class="fas fa-times-circle"></i>
-                {{"CANCEL" | translate}}
+                {{"Back" | translate}}
+                <!-- {{"CANCEL" | translate}} -->
             </button>
         </div>
     </div>
