--- a/src/app/inventory/l0-email/l0-email.component.scss
+++ b/src/app/inventory/l0-email/l0-email.component.scss
@@ -1,6 +1,11 @@
-.ProblemDiv{
+.ProblemDiv {
     max-height: 100px;
     height: 100px;
     overflow: auto;
     padding: 2px;
+}
+
+.l0EmailTable {
+    max-height: 550px;
+    overflow: auto;
 }
