--- a/src/app/inventory/team-interactions-list/team-interactions-list.component.html
+++ b/src/app/inventory/team-interactions-list/team-interactions-list.component.html
@@ -136,7 +136,7 @@
     </div>
 </div>
 <div class="table-responsive">
-    <div class="table table-bordered table-hover grid-height">
+    <div class="table table-bordered table-hover table_height">
         <table [dir]="langDir" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows
             matSortActive="productName">
             <ng-container matColumnDef="action">
