--- a/src/app/email-inbox/email-inbox/email-inbox.component.html
+++ b/src/app/email-inbox/email-inbox/email-inbox.component.html
@@ -8,6 +8,9 @@
     </div>
 </div>
 <div class="row">
+<div class="loading-shade" *ngIf="isLoading" >
+    <mat-spinner></mat-spinner>
+  </div>
     <div class="col-md-12" *ngFor="let data of inboxList"  >
         <div class="d-flex emaildiv">
             <div class="checkBox-section">
@@ -30,5 +33,14 @@
             </div>
 
         </div>
+    </div>
+
+    <div class="col-md-12 mt-3" *ngIf="inboxList?.length">
+        <mat-paginator [length]="totalCount" [pageSize]="PageSize"
+                        [pageSizeOptions]="[10,20,30]" (page)="onPageChange($event)">
+                    </mat-paginator>
+    </div>
+    <div class="noDataDiv w-100" *ngIf="!isLoading && !inboxList.length" >
+        No data found
     </div>
 </div>
