--- a/src/app/inventory/add-interactions/add-interactions.component.html
+++ b/src/app/inventory/add-interactions/add-interactions.component.html
@@ -204,7 +204,8 @@
                     {{"SAVE" | translate}}</button>
                 <button type="button" class="btn btn-danger btn-md px-3 py-2" [routerLink]="['/interactions']"><i
                         class="fas fa-times-circle"></i>
-                    {{"CANCEL" | translate}}
+                    <!-- {{"CANCEL" | translate}} -->
+                    {{"Back" | translate}}
                 </button>
             </div>
         </div>
