--- a/src/app/inventory/send-email-dialog/send-email-dialog.component.html
+++ b/src/app/inventory/send-email-dialog/send-email-dialog.component.html
@@ -112,7 +112,8 @@
     </button>
     <button type="button" class="btn btn-danger btn-md mx-2" (click)="dialogRef.close(false);"><i
         class="fas fa-times-circle"></i>
-      {{"CANCEL" | translate}}
+      <!-- {{"CANCEL" | translate}} -->
+      {{"Back" | translate}}
     </button>
   </div>
 </mat-dialog-actions>
