--- a/src/app/lookup/add-edit-sub-lookup/add-edit-sub-lookup.component.html
+++ b/src/app/lookup/add-edit-sub-lookup/add-edit-sub-lookup.component.html
@@ -95,7 +95,8 @@
                     translate}}</button>
                 <button type="button" class="btn btn-danger btn-sm" (click)="onCancel()"><i
                         class="fas fa-times-circle"></i>
-                    {{"CANCEL" | translate}}
+                    <!-- {{"CANCEL" | translate}} -->
+                    {{"Back" | translate}}
                 </button>
             </div>
         </div>
